Add comprehensive benchmark for all lock types

--- a/lectures/05_spinlocks_and_contention/code/dune
+++ b/lectures/05_spinlocks_and_contention/code/dune
@@ -81,6 +81,12 @@
  (modes exe))
 
 (executable
+ (name benchmark_all_locks)
+ (libraries unix spinlocks)
+ (modules benchmark_all_locks)
+ (modes exe))
+
+(executable
  (name benchmark_alock)
  (libraries unix spinlocks)
  (modules benchmark_alock)
