--- a/lectures/07_linked_lists/code/lib/dune
+++ b/lectures/07_linked_lists/code/lib/dune
@@ -1,3 +1,15 @@
 (library
+ (name seq_list)
+ (modules seq_list))
+
+(library
  (name coarse_list)
  (modules coarse_list))
+
+(library
+ (name fine_list)
+ (modules fine_list))
+
+(library
+ (name optimistic_list)
+ (modules optimistic_list))
